# platform

./: .gitignore  .gitmodules  COPYING  LICENSE.txt  README.textile  README_to_drop_osx10_4.txt  build.xml
src/: .gitattributes  BUILDING  BUILDING.txt  CMakeLists.txt  PlatformVersion.cmake  build.xml
src/bins/: CMakeLists.txt
src/bins/browserpluscore/: .gitignore  BrowserPlus.config  BrowserPlus.config.erb  CMakeLists.txt  exported_symbols.txt  main.cpp  stdafx.h  strings.json.erb
src/bins/browserpluscore/Daemon/: ActiveSession.cpp  ActiveSession.h  AutoShutdown.cpp  AutoShutdown.h  BPDaemon.cpp  BPDaemon.h  CoreletInstaller.cpp  CoreletInstaller.h  CoreletUpdater.cpp  CoreletUpdater.h  PermissionsUpdater.cpp  PermissionsUpdater.h  PlatformUpdater.cpp  PlatformUpdater.h  RequireLock.cpp  RequireLock.h  RequireRequest.cpp  RequireRequest.h  ServiceInstaller.cpp  ServiceInstaller.h  ServiceUpdater.cpp  ServiceUpdater.h  SessionManager.cpp  SessionManager.h  SystemConfig.cpp  SystemConfig.h  UsageReporting.cpp  UsageReporting.h
src/bins/config_panel/: CMakeLists.txt
src/bins/config_panel/src/: CMakeLists.txt
src/bins/installer/: BrowserPlusInstaller.cpp  BrowserPlusUninstaller_Darwin.mm  BrowserPlusUninstaller_UNIX.cpp  BrowserPlusUninstaller_Windows.cpp  BrowserPlusUpdater.cpp  CMakeLists.txt  InstallProcessRunner.cpp  InstallProcessRunner.h  InstallerRunner.cpp  InstallerRunner.h  InstallerSkin.cpp  InstallerSkin.h  InstallerSkinGUI.h  InstallerSkinMinimal.cpp  InstallerSkinMinimal.h  InstallerSkinVerbose.cpp  InstallerSkinVerbose.h  ScriptableInstallerObject.cpp  ScriptableInstallerObject.h  installer.config.erb
src/bins/installer/Darwin/: InstallerSkinGUI_Darwin.mm
src/bins/installer/Linux/: InstallerSkinGUI_Linux.cpp
src/bins/installer/Windows/: BrowserPlusInstaller.rc.erb  BrowserPlusUninstaller.rc.erb  InstallerSkinGUI_Windows.cpp  asInvoker.manifest  resource.h.erb
src/javascript/: CMakeLists.txt
src/javascript/dashboard/: dashboard.css  dashboard.js  foo.js  index.html  json.js
src/javascript/src/: .gitignore  browserplus.js.erb
src/libs/: CMakeLists.txt
src/libs/archive/: CMakeLists.txt
src/libs/archive/src/: CMakeLists.txt  bplzma.cpp  bplzmaCompress.cpp  bplzmaDecompress.cpp  bppkg.cpp  bptar.cpp  stdafx.h
src/libs/archive/test/: BPKGTest.cpp  BPKGTest.h  BPTARTest.cpp  BPTARTest.h  CMakeLists.txt  LZMATest.cpp  LZMATest.h
src/libs/bpipc/: CMakeLists.txt
src/libs/bpproto/: BPErrorStrings.cpp  BPProtoUtil.cpp  BPProtoUtil.h  BPProtocol.cpp  CMakeLists.txt  SessionCreator.cpp  SessionCreator.h  TransactionManager.cpp  TransactionManager.h
src/libs/bputils/: CMakeLists.txt
src/libs/console/: CMakeLists.txt  CommandHandler.cpp  CommandParser.cpp
src/libs/distro_client/: CMakeLists.txt  CoreletQuery.cpp  CoreletQuery.h  CoreletQueryUtil.cpp  CoreletQueryUtil.h  CoreletUnpacker.cpp  DESIGN.txt  DistQuery.cpp  PendingUpdateCache.cpp  PendingUpdateCache.h  PlatformUnpacker.cpp  QueryCache.cpp  QueryCache.cpp.erb  QueryCache.h  ServiceQuery.cpp  ServiceQuery.h  ServiceQueryUtil.cpp  ServiceQueryUtil.h  ServiceUnpacker.cpp  Unpacker.cpp  WSProtocol.cpp  WSProtocol.h  stdafx.h
src/libs/html_render/: CMakeLists.txt
src/libs/installer/: .gitignore  CMakeLists.txt  platformInfo.json.erb
src/libs/permissions/: .gitignore  CMakeLists.txt  PermissionsManager.cpp  README.txt  permissions.json.erb
src/libs/service_manager/: CMakeLists.txt  CoreletExecutionContext.cpp  CoreletFactory.cpp  CoreletInstance.cpp  CoreletRegistry.cpp  ServiceExecutionContext.cpp  ServiceFactory.cpp  ServiceInstance.cpp  ServiceRegistry.cpp  stdafx.h
src/libs/service_runner/: CMakeLists.txt  stdafx.h
src/libs/test_framework/: CMakeLists.txt  README  testHarness.cpp
src/plugins/: CMakeLists.txt
src/plugins/activex/: CMakeLists.txt
src/plugins/common/: CMakeLists.txt  README  stdafx.h
src/plugins/npapi/: CMakeLists.txt  README
src/sdk/: CMakeLists.txt
src/sdk/sample_services/: CMakeLists.txt
src/sdk/service_api/: README  ServiceAPI.dxy
src/sdk/service_installer/: CMakeLists.txt  installer.cpp
src/sdk/service_publisher/: CMakeLists.txt  PusherMan.cpp  PusherMan.h  packager.cpp
src/sdk/service_runner/: CMakeLists.txt  CommandExecutor.cpp  CommandExecutor.h  ControllerManager.cpp  ControllerManager.h  Output.cpp  Output.h  main.cpp
src/support/: CMakeLists.txt
src/support/BuildTemplates/: BuildTemplates.cmake  ChangeLog  LICENSE.txt  PublicMacros.cmake
src/support/build_scripts/: .gitignore  BPAddTest.cmake  BPEnv.bat  BPRandDefn.cmake  BPSubstitution.cmake  BPUseExternal.cmake  BrowserPlusBuildConfigs.cmake  BuildSDK.cmake  alias_list.txt  erb_subst.rb  generate.rb  generate.rb.erb  installLocally.rb.erb  makeInstaller.rb.erb  packageSDK.rb.erb  pushService.rb  pushService.rb.erb  showReg.rb  update_source_licenses.rb
src/support/l10n/: diff_strings.rb  extract_service_strings.rb  localizeUI.rb  servin.rb  strings.json  validate_translations.rb
src/support/signing/: CMakeLists.txt  Combined.crt  sign.rb
src/support/xpi_packaging/: README.txt  chrome.manifest  install.rdf
src/tools/: CMakeLists.txt
src/tools/bpargvtest/: CMakeLists.txt  main.cpp
src/tools/bpclient/: CMakeLists.txt  CommandExecutor.cpp  CommandExecutor.h  main.cpp
src/tools/bpkg/: CMakeLists.txt  main.cpp
src/tools/bplocale/: CMakeLists.txt  main.cpp
src/tools/bpproto_stress/: CMakeLists.txt  main.cpp  stresstest.cpp  stresstest.h
src/tools/bptar/: CMakeLists.txt  main.cpp
src/tools/bpwebserve/: CMakeLists.txt  main.cpp
src/tools/bpwget/: CMakeLists.txt  main.cpp
src/tools/cli_prog_sample/: CMakeLists.txt  main.cpp
src/tools/distro_client/: CMakeLists.txt  CommandExecutor.cpp  CommandExecutor.h  main.cpp
src/tools/install_bootstrapper/: CMakeLists.txt  README  bootstrap.aps  bootstrap.cpp  bootstrap.rc.erb  resource.h
src/tools/ipcclient/: CMakeLists.txt  main.cpp
src/tools/ipcserver/: CMakeLists.txt  main.cpp
src/tools/service_manager/: CMakeLists.txt  CommandExecutor.cpp  CommandExecutor.h  InstanceManager.cpp  InstanceManager.h  main.cpp
(+759 files in other folders)
