# ***** BEGIN LICENSE BLOCK *****
# The contents of this file are subject to the Mozilla Public License
# Version 1.1 (the "License"); you may not use this file except in
# compliance with the License. You may obtain a copy of the License at
# http://www.mozilla.org/MPL/
# 
# Software distributed under the License is distributed on an "AS IS"
# basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See the
# License for the specific language governing rights and limitations
# under the License.
# 
# The Original Code is BrowserPlus (tm).
# 
# The Initial Developer of the Original Code is Yahoo!.
# Portions created by Yahoo! are Copyright (c) 2010 Yahoo! Inc.
# All rights reserved.
# 
# Contributor(s): 
# ***** END LICENSE BLOCK *****
ADD_SUBDIRECTORY(bputils)
ADD_SUBDIRECTORY(test_framework)
ADD_SUBDIRECTORY(archive)
ADD_SUBDIRECTORY(console)
ADD_SUBDIRECTORY(i18n)
ADD_SUBDIRECTORY(html_render)
ADD_SUBDIRECTORY(bpproto)

ADD_SUBDIRECTORY(distro_client)
ADD_SUBDIRECTORY(service_runner)
ADD_SUBDIRECTORY(service_manager)
ADD_SUBDIRECTORY(installer)
ADD_SUBDIRECTORY(permissions)

